test/sema/trait_objects/trait_object_trait_template_method.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait Foo {
  fn foo<T>(self: borrowed Self) {}
}

fn main() {
  // CHECK: [[# @LINE + 1 ]]:16: error: traits with template methods cannot be used in trait objects
  let x: *impl Foo;
}
